CHROMIUM: iwl7000: fw: don't send GEO_TX_POWER_LIMIT command to FW version 36

The intention was to have the GEO_TX_POWER_LIMIT command in FW version
36 as well, but not all 8000 family got this feature enabled.  The
8000 family is the only one using version 36, so skip this version
entirely.  If we try to send this command to the firmwares that do not
support it, we get a BAD_COMMAND response from the firmware.

This fixes https://bugzilla.kernel.org/show_bug.cgi?id=204151.

Change-Id: I11ea8229111ad21266ce5850078a67bf4d2f1a3d
Cc: stable@vger.kernel.org # 4.19+
Signed-off-by: Luca Coelho <luciano.coelho@intel.com>
iwl7000-tree: 5da8c517edbe37dfc3b738f24b02067ffc6a5684